--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "smart-device",
+  "name": "jewellery",
   "version": "1.0.0",
   "description": "Стартовый шаблон сборки Лиги А",
   "devDependencies": {
@@ -51,7 +51,10 @@
     "node": "8.15"
   },
   "dependencies": {
+    "accordion-js": "^3.1.1",
+    "accordionjs": "^2.1.2",
     "del": "^4.1.1",
-    "imask": "^6.0.7"
+    "imask": "^6.0.7",
+    "jquery": "^3.6.0"
   }
 }
